fixed alignment

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
 .container {
   font-size: 16px;
   top: 40%;
-  left: 30%;
+  left: 50%;
   position: absolute;
   color: #FFFFFF;
   text-align: center;
